# Stoiridh.Settings

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  stoiridh-settings.qbs
doc/: Makefile  doc.qbs  make.bat  stoiridh-settings.qdocconf
doc/source/: api.rst  conf.py  index.rst
doc/source/qml/: groupsettings.rst  settings.rst  settingsmanager.rst  windowsettings.rst
doc/src/: stoiridhsettings-index.qdoc  stoiridhsettings.qdoc
src/: CMakeLists.txt  abstractsetting.cpp  abstractsetting.hpp  groupsettings.cpp  groupsettings.hpp  plugin.cpp  plugin.hpp  setting.cpp  setting.hpp  settingmanager.cpp  settingmanager.hpp  settings.cpp  settings.hpp  settingsmanager.cpp  settingsmanager.hpp  src.qbs  stoiridhsettings_plugin.cpp  windowsetting.cpp  windowsetting.hpp  windowsettings.cpp  windowsettings.hpp
src/qml/: plugins.qmltypes  qmldir
tests/: CMakeLists.txt  tests.qbs
tests/auto/: CMakeLists.txt  auto.qbs
tests/auto/settings/: CMakeLists.txt  settings.qbs  tst_stoiridh_settings.cpp
tests/auto/settings/data/: tst_settings.qml  tst_windowsettings.qml
tests/auto/settings/qml/: tst_groupsettings.qml  tst_setting.qml  tst_settings.qml  tst_windowsetting.qml
